<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.HelpFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:text="Guides for Calamba Wonders"
                android:textSize="21sp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_regular"
                android:textAlignment="center"
                android:textColor="@color/black_custom"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:text="@string/guide"
                android:textSize="14sp"
                android:textColor="@color/black_custom"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/black_custom"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:text="Places"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="20dp"
                android:textSize="19sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/black_custom"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center|left"
                android:layout_height="wrap_content">

                <ImageButton
                    android:backgroundTint="@color/theme"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginRight="30dp"
                    android:src="@drawable/faves"
                    app:tint="@color/black_custom" />
                <TextView
                    android:fontFamily="@font/poppins_regular"
                    android:layout_width="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/faves"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center|left"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content">

                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/theme"
                    android:layout_marginRight="30dp"
                    android:src="@drawable/bldg_navbar"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/bldg"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center|left"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content">

                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/theme"
                    android:layout_marginRight="30dp"
                    android:src="@drawable/restaurant_navbar"/>

                <TextView
                    android:fontFamily="@font/poppins_regular"
                    android:layout_width="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/resto"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center|left"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content">

                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/theme"
                    android:layout_marginRight="30dp"
                    android:src="@drawable/beach_navbar"/>
                <TextView
                    android:fontFamily="@font/poppins_regular"
                    android:layout_width="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/resortz"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center|left"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content">

                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/theme"
                    android:layout_marginRight="30dp"
                    android:src="@drawable/terminal_navbar"/>
                <TextView
                    android:fontFamily="@font/poppins_regular"
                    android:layout_width="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/terminalss"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/black_custom"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:text="Navigation"
                android:layout_marginTop="20dp"
                android:textSize="19sp"
                android:fontFamily="@font/poppins_regular"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/black_custom"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center|left"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content">

                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/theme"
                    android:layout_marginRight="30dp"
                    android:src="@drawable/my_location_icon"/>
                <TextView
                    android:fontFamily="@font/poppins_regular"
                    android:layout_width="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/user_targer"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center|left"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content">

                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/theme"
                    android:layout_marginRight="30dp"
                    android:src="@drawable/road_map"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/map_style"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center|left"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content">

                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/theme"
                    android:layout_marginRight="30dp"
                    android:src="@drawable/nearest"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/nearest"
                    android:layout_height="wrap_content"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center|left"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content">

                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/theme"
                    android:layout_marginRight="30dp"
                    android:src="@drawable/virtual"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/camera"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center|left"
                android:layout_height="wrap_content">

                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/theme"
                    android:layout_marginRight="30dp"
                    android:src="@drawable/transport"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/black"
                    android:text="@string/streets"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center|left"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content">

                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/theme"
                    android:layout_marginRight="30dp"
                    android:src="@drawable/panorama"
                    app:tint="@color/black_custom" />
                <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/panorama_camera"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center|left"
                android:layout_height="wrap_content">

                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/theme"
                    android:layout_marginRight="30dp"
                    android:src="@drawable/directions_icon"/>
                <TextView
                    android:fontFamily="@font/poppins_regular"
                    android:layout_width="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/directions"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                app:backgroundTint="@color/theme"
                app:cornerRadius="10dp"
                android:textColor="@color/black_custom"
                android:textAllCaps="false"
                android:id="@+id/btnUnderstand"
                android:padding="15dp"
                android:text="I Understand"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>